api features that made spa less complex
